Update mobile view

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="theme-color" content="#ffffff" />
+		<link rel="preload" as="image" href="/logo-zsm.png" />
 	</head>
 	<body>
 		<div id="app"></div>
