--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
-	<head>
-		<link rel="icon" href="/favicon.ico" />
-		<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png" />
-		<link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#5bbad5" />
-		<meta name="msapplication-TileColor" content="#da532c" />
-		<meta name="msapplication-TileImage" content="/assets/images/mstile.png" />
-		<title>ZSM | Plan Lekcji</title>
-		<meta name="description" content="ZSM TimeTable App" />
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="theme-color" content="#ffffff" />
-		<link rel="preload" as="image" href="/assets/images/logo.png" />
-	</head>
-	<body>
-		<div id="app"></div>
-		<script type="module" src="/src/main.js"></script>
-	</body>
+  <head>
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png" />
+    <link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="msapplication-TileImage" content="./assets/images/mstile.png" />
+    <meta name="msapplication-config" content="./browserconfig.xml" />
+    <title>ZSM | Plan Lekcji</title>
+    <meta name="description" content="ZSM TimeTable App" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="preload" as="image" href="/assets/images/logo.png" />
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
