Move from styles to Bootstrap classes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl-PL">
+<html lang="pl-PL" class="h-100">
   <head>
     <link rel="icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png" />
@@ -14,8 +14,8 @@
     <meta name="theme-color" content="#ffffff" />
     <link rel="preload" as="image" href="/assets/images/logo.png" />
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="vw-100 h-100">
+    <div id="app" class="h-100 mw-100 d-flex flex-nowrap"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
