--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png" />
     <link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="msapplication-TileImage" content="./assets/images/mstile.png" />
-    <meta name="msapplication-config" content="./browserconfig.xml" />
+    <meta name="msapplication-TileImage" content="/plan_lekcji/assets/images/mstile.png" />
+    <meta name="msapplication-config" content="/plan_lekcji/browserconfig.xml" />
     <title>ZSM | Plan Lekcji</title>
     <meta name="description" content="ZSM TimeTable App" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="preload" as="image" href="/assets/images/logo.png" />
   </head>
   <body class="vw-100 h-100">
     <div id="load" class="position-fixed text-center top-50 start-50 translate-middle d-none">
