--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="pl-PL" class="h-100">
-  <head>
-    <link rel="icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png" />
-    <link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#5bbad5" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="msapplication-TileImage" content="/plan_lekcji/assets/images/mstile.png" />
-    <meta name="msapplication-config" content="/plan_lekcji/browserconfig.xml" />
-    <title>ZSM | Plan Lekcji</title>
-    <meta name="description" content="ZSM TimeTable App" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#ffffff" />
-  </head>
-  <body class="vw-100 h-100">
-    <div id="load" class="position-fixed text-center top-50 start-50 translate-middle d-none">
-      <h1>Trwa wczytywanie aplikacji</h1>
-      <p>Przy wolniejszym połączeniu z siecią może to chwilę potrwać.</p>
-    </div>
-    <div id="app" class="h-100 mw-100 d-flex flex-nowrap"></div>
-    <script>
-      document.getElementById('load').classList.remove('d-none');
-    </script>
-    <noscript>
-      <div class="position-fixed text-center top-50 start-50 translate-middle">
-        <h1>Błąd</h1>
-        <p>Niestety twoja przeglądarka nie wspiera javascript, który jest wymagany przez tą stronę.</p>
-        <a href="https://zsm.resman.pl/plan_vulcan/">Otwórz starszą wersję strony</a>
-      </div>
-    </noscript>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+	<head>
+		<link rel="icon" href="/favicon.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png" />
+		<link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#5bbad5" />
+		<meta name="msapplication-TileColor" content="#da532c" />
+		<meta name="msapplication-TileImage" content="/plan_lekcji/assets/images/mstile.png" />
+		<meta name="msapplication-config" content="/plan_lekcji/browserconfig.xml" />
+		<title>ZSM | Plan Lekcji</title>
+		<meta name="description" content="ZSM TimeTable App" />
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="theme-color" content="#ffffff" />
+	</head>
+	<body class="vw-100 h-100">
+		<div id="load" class="position-fixed text-center top-50 start-50 translate-middle d-none">
+			<h1>Trwa wczytywanie aplikacji</h1>
+			<p>Przy wolniejszym połączeniu z siecią może to chwilę potrwać.</p>
+		</div>
+		<div id="app" class="h-100 mw-100 d-flex flex-nowrap"></div>
+		<script>
+			document.getElementById('load').classList.remove('d-none');
+		</script>
+		<noscript>
+			<div class="position-fixed text-center top-50 start-50 translate-middle">
+				<h1>Błąd</h1>
+				<p>Niestety twoja przeglądarka nie wspiera javascript, który jest wymagany przez tą stronę.</p>
+				<a href="https://zsm.resman.pl/plan_nauczyciele/">Otwórz starszą wersję strony</a>
+			</div>
+		</noscript>
+		<script type="module" src="/src/main.js"></script>
+	</body>
 </html>
