--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png" />
 		<link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#5bbad5" />
 		<meta name="msapplication-TileColor" content="#da532c" />
-		<meta name="msapplication-TileImage" content="/plan_lekcji/assets/images/mstile.png" />
-		<meta name="msapplication-config" content="/plan_lekcji/browserconfig.xml" />
+		<meta name="msapplication-TileImage" content="%APP_ROOT%assets/images/mstile.png" />
+		<meta name="msapplication-config" content="%APP_ROOT%browserconfig.xml" />
 		<title>ZSM | Plan Lekcji</title>
 		<meta name="description" content="ZSM TimeTable App" />
 		<meta charset="UTF-8" />
@@ -26,7 +26,7 @@
 			<div class="position-fixed text-center top-50 start-50 translate-middle">
 				<h1>Błąd</h1>
 				<p>Niestety twoja przeglądarka nie wspiera javascript, który jest wymagany przez tą stronę.</p>
-				<a href="https://zsm.resman.pl/plan_vulcan/">Otwórz starszą wersję strony</a>
+				<a href="%schoolROOT%">Otwórz starszą wersję strony</a>
 			</div>
 		</noscript>
 		<script type="module" src="/src/main.js"></script>
