--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="position-fixed text-center top-50 start-50 translate-middle">
 				<h1>Błąd</h1>
 				<p>Niestety twoja przeglądarka nie wspiera javascript, który jest wymagany przez tą stronę.</p>
-				<a href="%schoolROOT%">Otwórz starszą wersję strony</a>
+				<a href="%schoolROOT%?app=noscript">Otwórz starszą wersję strony</a>
 			</div>
 		</noscript>
 		<script type="module" src="/src/main.js"></script>
