--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png" />
 		<link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#5bbad5" />
 		<meta name="msapplication-TileColor" content="#da532c" />
-		<meta name="msapplication-TileImage" content="%APP_ROOT%assets/images/mstile.png" />
-		<meta name="msapplication-config" content="%APP_ROOT%browserconfig.xml" />
+		<meta name="msapplication-TileImage" content="%BASE_URL%assets/images/mstile.png" />
+		<meta name="msapplication-config" content="%BASE_URL%browserconfig.xml" />
 		<title>ZSM | Plan Lekcji</title>
 		<meta name="description" content="ZSM TimeTable App" />
 		<meta charset="UTF-8" />
