--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<link
 			rel="stylesheet"
 			crossorigin="anonymous"
-			href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap" />
+			href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:wght@400;700&display=swap" />
 		<style>
 			body {
 				font-family: 'Roboto Condensed', sans-serif;
@@ -77,7 +77,7 @@
 			function addUnknowns(target, unknown) {
 				unknownData[target].add(unknown);
 			}
-			function getUnknowns(target) {
+			function getUnknowns(target = 'all') {
 				switch (target) {
 					case 'subjects':
 						console.warn('Nieznane przedmioty:\n', unknownData.subjects);
