--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
 				}
 			}
 		</script>
+		<script>
+			function testSentry() {
+				throw Error('Sentry test Error');
+			}
+		</script>
 		<noscript>
 			<div class="loading">
 				<h1>Błąd</h1>
