--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		</script>
 		<script>
 			window.installhandler = function (e) {
-				console.log('Install event catched before initialization');
+				console.log('[App] Install event catched before initialization');
 				e.preventDefault();
 				window.installevent = e;
 			};
