Add canonization link

--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
 	<head>
+		<title>Plan Lekcji</title>
+		<meta name="description" content="Aplikacja do przegladu szkolnego planu lekcji." />
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="canonical" id="canonical-link" />
+		<script id="setup">
+			document.querySelector('#canonical-link').setAttribute('href', `https://${location.host}%BASE_URL%`);
+			document.querySelector('#setup').remove();
+		</script>
 		<link rel="icon" href="/favicon.ico" />
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png" />
 		<link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#5bbad5" />
 		<meta name="msapplication-TileColor" content="#da532c" />
 		<meta name="msapplication-TileImage" content="%BASE_URL%assets/images/mstile.png" />
 		<meta name="msapplication-config" content="%BASE_URL%browserconfig.xml" />
-		<title>Plan Lekcji</title>
-		<meta name="description" content="TimeTable App" />
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="theme-color" content="#ffffff" />
 		<link rel="preconnect" crossorigin="anonymous" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" crossorigin="anonymous" href="https://fonts.gstatic.com" />
