Remove problematic code

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 			<div class="loading">
 				<h1>Błąd</h1>
 				<p>Niestety twoja przeglądarka nie wspiera javascript, który jest wymagany przez tą stronę.</p>
-				<a href="%schoolROOT%">Otwórz starszą wersję strony</a>
+				<!-- <a href="">Otwórz starszą wersję strony</a> -->
 			</div>
 		</noscript>
 		<script type="module" src="/src/main.js"></script>
