--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		</script>
 		<style>
 			body {
-				font-family: 'Roboto Condensed', sans-serif;
+				font-family: 'Roboto Condensed', system-ui, sans-serif;
 			}
 		</style>
 		<style id="loader-styles">
