--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 			document.head.appendChild(link)
 		</script>
 		<style>
-			body {
-				font-family: 'Roboto Condensed', system-ui, sans-serif;
+			body, input[type='text'] {
+				font-family: 'Roboto Condensed', 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 			}
 		</style>
 		<style id="loader-styles">
