--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				display: 'swap',
 				text: {
 					letters: '0123456789aAbBcCdDeEfFgGhHiIjJkKlLmMnNoOpPqQrRsStTuUvVwWxXyYzZąĄćĆęĘłŁńŃóÓśŚźŹżŹ',
-					symbols: '.(),/"-&:'
+					symbols: '!@#$%^&*()_+-=[]{}|;:,.<>?/\\\'"~`'
 				}
 			}
 			function getFontURL() {
@@ -53,7 +53,7 @@
 		</script>
 		<style>
 			body, input[type='text'] {
-				font-family: 'Roboto Condensed', 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+				font-family: 'Roboto Condensed', sans-serif;
 			}
 		</style>
 		<style id="loader-styles">
