--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
         .warnPrint {
           display: flex;
         }
+        .warnPrint * {
+          display: initial !important;
+        }
       }
     </style>
   </head>
@@ -131,7 +134,7 @@
     <div class="loading warnPrint">
       <h1>Błąd</h1>
       <p>
-        Aby wydrukować plan lekcji skorzystaj z opcji w menu
+        Aby wydrukować plan lekcji skorzystaj z opcji w menu.
       </p>
     </div>
     <div id="app"></div>
