--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         display: none;
       }
       @media print {
-        .warnPrint {
+        .preventPrint .warnPrint {
           display: flex;
         }
       }
