--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     />
     <meta name="msapplication-config" content="%BASE_URL%browserconfig.xml" />
     <meta name="theme-color" content="#ffffff" />
+    <link rel="preload" as="image" href="%BASE_URL%assets/images/logo.png" />
+    <link rel="preload" as="image" href="%BASE_URL%assets/images/Wakacje.png" />
     <link
       rel="preconnect"
       crossorigin="anonymous"
