--- a/index.html
+++ b/index.html
@@ -1,112 +1,93 @@
 <!doctype html>
 <html lang="pl-PL">
-  <head>
-    <title>Plan Lekcji</title>
-    <meta
-      name="description"
-      content="Aplikacja do przegladu szkolnego planu lekcji."
-    />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="canonical" id="canonical-link" />
-    <script id="setup">
-      document
-        .querySelector("#canonical-link")
-        .setAttribute("href", `https://${location.host}%BASE_URL%`);
-      document.querySelector("#setup").remove();
-    </script>
-    <link rel="icon" href="/favicon.ico" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/assets/images/apple-touch-icon.png"
-    />
-    <link
-      rel="mask-icon"
-      href="/assets/images/safari-pinned-tab.svg"
-      color="#5bbad5"
-    />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta
-      name="msapplication-TileImage"
-      content="%BASE_URL%assets/images/mstile.png"
-    />
-    <meta name="msapplication-config" content="%BASE_URL%browserconfig.xml" />
-    <meta name="theme-color" content="#ffffff" />
-    <link rel="preload" as="image" href="%BASE_URL%assets/images/logo.png" />
-    <link rel="preload" as="image" href="%BASE_URL%assets/images/Wakacje.png" />
-    <style>
-      body,
-      input[type="text"] {
-        font-family: "Roboto Condensed", sans-serif;
-      }
-    </style>
-    <style>
-      html,
-      body,
-      .appMessage {
-        margin: 0;
-        height: 100%;
-        width: 100%;
-      }
-      .appMessage {
-        position: fixed;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-      }
-      .appMessage > * {
-        text-decoration: none;
-        max-width: min(100% - 20px, 600px);
-        margin: 0;
-        margin-bottom: 10px;
-      }
-      .appMessage.hidden {
-        display: none;
-      }
-      .warnPrint {
-        display: none;
-      }
-      @media print {
-        .preventPrint .warnPrint {
-          display: flex;
-        }
-      }
-    </style>
-  </head>
-  <body class="light preventPrint">
-    <div id="loader" class="appMessage hidden">
-      <h1>Trwa wczytywanie aplikacji</h1>
-      <p>Przy wolniejszym połączeniu z siecią może to chwilę potrwać.</p>
-    </div>
-    <div class="appMessage warnPrint">
-      <h1>Błąd</h1>
-      <p>Aby wydrukować plan lekcji skorzystaj z opcji w menu.</p>
-    </div>
-    <div id="app"></div>
-    <script id="loader-script">
-      document.getElementById("loader").classList.remove("hidden");
-    </script>
-    <script>
-      window.installhandler = function (e) {
-        console.log("[App] Install event catched before initialization");
-        e.preventDefault();
-        window.installevent = e;
-      };
-      window.addEventListener("beforeinstallprompt", installhandler);
-    </script>
-    <noscript>
-      <div class="appMessage">
-        <h1>Błąd</h1>
-        <p>
-          Niestety twoja przeglądarka nie wspiera javascript, który jest
-          wymagany przez tą stronę.
-        </p>
-        <!-- <a href="">Otwórz starszą wersję strony</a> -->
-      </div>
-    </noscript>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+	<head>
+		<title>Plan Lekcji</title>
+		<meta name="description" content="Aplikacja do przegladu szkolnego planu lekcji." />
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="canonical" id="canonical-link" />
+		<script id="setup">
+			document.querySelector('#canonical-link').setAttribute('href', `https://${location.host}%BASE_URL%`);
+			document.querySelector('#setup').remove();
+		</script>
+		<link rel="icon" href="/favicon.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png" />
+		<link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#5bbad5" />
+		<meta name="msapplication-TileColor" content="#da532c" />
+		<meta name="msapplication-TileImage" content="%BASE_URL%assets/images/mstile.png" />
+		<meta name="msapplication-config" content="%BASE_URL%browserconfig.xml" />
+		<meta name="theme-color" content="#ffffff" />
+		<link rel="preload" as="image" href="%BASE_URL%assets/images/logo.png" />
+		<link rel="preload" as="image" href="%BASE_URL%assets/images/Wakacje.png" />
+		<style>
+			body,
+			input[type='text'] {
+				font-family: 'Roboto Condensed', sans-serif;
+			}
+		</style>
+		<style>
+			html,
+			body,
+			.appMessage {
+				margin: 0;
+				height: 100%;
+				width: 100%;
+			}
+			.appMessage {
+				position: fixed;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				justify-content: center;
+				text-align: center;
+			}
+			.appMessage > * {
+				text-decoration: none;
+				max-width: min(100% - 20px, 600px);
+				margin: 0;
+				margin-bottom: 10px;
+			}
+			.appMessage.hidden {
+				display: none;
+			}
+			.warnPrint {
+				display: none;
+			}
+			@media print {
+				.preventPrint .warnPrint {
+					display: flex;
+				}
+			}
+		</style>
+	</head>
+	<body class="light preventPrint">
+		<div id="loader" class="appMessage hidden">
+			<h1>Trwa wczytywanie aplikacji</h1>
+			<p>Przy wolniejszym połączeniu z siecią może to chwilę potrwać.</p>
+		</div>
+		<div class="appMessage warnPrint">
+			<h1>Błąd</h1>
+			<p>Aby wydrukować plan lekcji skorzystaj z opcji w menu.</p>
+		</div>
+		<div id="app"></div>
+		<script id="loader-script">
+			document.getElementById('loader').classList.remove('hidden');
+		</script>
+		<script>
+			window.installhandler = function (e) {
+				console.log('[App] Install event catched before initialization');
+				e.preventDefault();
+				window.installevent = e;
+			};
+			window.addEventListener('beforeinstallprompt', installhandler);
+		</script>
+		<noscript>
+			<div class="appMessage">
+				<h1>Błąd</h1>
+				<p>Niestety twoja przeglądarka nie wspiera javascript, który jest wymagany przez tą stronę.</p>
+				<!-- <a href="">Otwórz starszą wersję strony</a> -->
+			</div>
+		</noscript>
+		<script type="module" src="/src/main.js"></script>
+	</body>
 </html>
